tests/compiler/binaryArithmatic2/index.ts
var v = 4 | undefined;
//~^ ERROR: The value 'undefined' cannot be used here.